--- a/GA-GCR-DCAPP/DCWebApp/Dockerfile
+++ b/GA-GCR-DCAPP/DCWebApp/Dockerfile
@@ -6,7 +6,8 @@ EXPOSE 80
 
 FROM mcr.microsoft.com/dotnet/sdk:6.0 AS build
 WORKDIR /src
-COPY ["DCWebApp/DCWebApp.csproj", "DCWebApp/"]
+#COPY ["DCWebApp/DCWebApp.csproj", "DCWebApp/"]
+COPY ["DCWebApp.csproj", ""]
 RUN dotnet restore "DCWebApp/DCWebApp.csproj"
 COPY . .
 WORKDIR "/src/DCWebApp"
