--- a/GA-GCR-DCAPP/DCWebApp/Dockerfile
+++ b/GA-GCR-DCAPP/DCWebApp/Dockerfile
@@ -10,8 +10,8 @@ WORKDIR /src
 COPY ["DCWebApp.csproj", ""]
 RUN dotnet restore "DCWebApp.csproj"
 COPY . .
-WORKDIR "/src/DCWebApp"
-RUN dotnet build "DCWebApp.csproj" -c Release -o /app/build
+WORKDIR "/src"
+RUN dotnet build "DCWebApp/DCWebApp.csproj" -c Release -o /app/build
 
 FROM build AS publish
 RUN dotnet publish "DCWebApp.csproj" -c Release -o /app/publish /p:UseAppHost=false
