--- a/.github/workflows/build-and-push.yml
+++ b/.github/workflows/build-and-push.yml
@@ -22,7 +22,7 @@ jobs:
         with:
           registry: docker.pkg.github.com
           username: ${{ github.actor }}
-          password: ${{ secrets.GAGCSECRET }}
+          password: ${{ secrets.GITHUB_TOKEN }}
           
           
       - name: Build Docker image
@@ -30,7 +30,7 @@ jobs:
         with:
           context: ./GA-GCR-DCAPP/DCWebApp
           push: true
-          tags: docker.pkg.github.com/nikhil.rangnekar/aks-dotnetcorewebapp-gitactions-gitcontainerreg/img-dnc-ga-gc:latest
+          tags: docker.pkg.github.com/Nikhil.Rangnekar/aks-dotnetcorewebapp-gitactions-gitcontainerreg/img-dnc-ga-gc:latest
         env:
           DOCKER_BUILDKIT: 1
 
