--- a/.github/workflows/build-and-push.yml
+++ b/.github/workflows/build-and-push.yml
@@ -5,6 +5,10 @@ on:
     branches:
       - main
 
+env:
+  REGISTRY: ghcr.io
+  IMAGE_NAME: ${{ github.repository }}
+  
 jobs:
   build-and-push:
     runs-on: ubuntu-latest
@@ -24,15 +28,19 @@ jobs:
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
           
+      - name: Extract metadata (tags, labels) for Docker
+        id: meta
+        uses: docker/metadata-action@98669ae865ea3cffbcbaa878cf57c20bbf1c6c38
+        with:
+          images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}   
           
       - name: Build Docker image
         uses: docker/build-push-action@v2
         with:
           context: ./GA-GCR-DCAPP/DCWebApp
           push: true
-          tags: docker.pkg.github.com/Nikhil.Rangnekar/aks-dotnetcorewebapp-gitactions-gitcontainerreg/img-dnc-ga-gc:latest
-        env:
-          DOCKER_BUILDKIT: 1
+          tags: ${{ steps.meta.outputs.tags }}
+          labels: ${{ steps.meta.outputs.labels }}
 
       
           
